# hybrid_dc

./: CMakeLists.txt  README.md  bem_brute.cpp  bem_fmm.cpp  bem_fmm_zoom.cpp  hybrid_brute.cpp  hybrid_fmm.cpp  hybrid_fmm_adap.cpp  hybrid_fmm_zoom.cpp
bem/: green_line_integral.cpp  green_line_integral.h  singular_on_bnd.cpp  singular_on_bnd.h
biem/: green_quadrature.cpp  green_quadrature.h  interpolate_density.cpp  interpolate_density.h  legendre_gauss_quadrature.cpp  legendre_gauss_quadrature.h  legendre_transform.cpp  legendre_transform.h
cmake/: FindLIBIGL.cmake  infinite.cmake
curve/: bezier_arclen_param.cpp  bezier_arclen_param.h  bezier_curves.cpp  bezier_curves.h  bezier_length.cpp  bezier_length.h  diffcurv.cpp  diffcurv.h  diffcurv_color.cpp  diffcurv_color.h  read_diffcurv_data.cpp  read_diffcurv_data.h  spline_to_poly.cpp  spline_to_poly.h  subdivide_curves.cpp  subdivide_curves.h
data/: baby.txt  blue_glass.txt  cherries.txt  cherry.json  cherry.txt  kiwi.txt  lady_blue_eye.json  lady_blue_eye.txt  lady_blue_eye_subdivided.txt  ladybug.txt  monet.txt  purple_cloak.txt  roses.txt  snail_in_forest.json  snail_in_forest.txt  snail_in_forest_subdivided.txt
fmm/: Ik.cpp  Ik.h  compute_cell_list.cpp  compute_cell_list.h  eval_fmm.cpp  eval_fmm.h  expansion.cpp  expansion.h  fmm.cpp  fmm.h  quadtree.cpp  quadtree.h  query_cell.cpp  query_cell.h  sol_fmm.cpp  sol_fmm.h
libigl/include/igl/: projection_constraint.cpp  slice.cpp  unproject_on_plane.cpp
util/: create_regular_grid.cpp  create_regular_grid.h  edge_indices.cpp  edge_indices.h  liang_barsky_clipper.cpp  liang_barsky_clipper.h  mat2d_to_compvec.cpp  mat2d_to_compvec.h  read_json.cpp  read_json.h  save_png.cpp  save_png.h  types.h  util.h
